--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/TournamentCreationModal.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/TournamentCreationModal.razor
@@ -92,7 +92,7 @@
     public decimal ValueMax { get; set; } = 8;
     public decimal GoldMin { get; set; } = 300;
     public decimal GoldMax { get; set; } = 600;
-    public decimal Gold { get; set; }
+    public decimal Gold { get; set; } = 300;
     public ApplicationUser User { get; set; }
 
     [Parameter] public EventCallback OnStateChanged { get; set; }
