structural changes, new projects, cache library, minor bugfixes

--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/AvailableTournaments.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/AvailableTournaments.razor
@@ -1,5 +1,5 @@
 ﻿@using FantasyEsportsBattle.Web.Data
-@using FantasyEsportsBattle.Web.Data.Models.Tournament
+@using FantasyEsportsBattle.Models.Tournament
 @using Microsoft.EntityFrameworkCore;
 @inject ApplicationDbContext DbContext
 @inject AuthenticationStateProvider AuthProvider
