--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/Index.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/Identity/Tournaments"
 @using FantasyEsportsBattle.Web.Data
-@using FantasyEsportsBattle.Web.Data.Models
-@using FantasyEsportsBattle.Web.Data.Models.Tournament
-@using FantasyEsportsBattle.Web.Areas.Identity.Pages.Tournaments
+@using FantasyEsportsBattle.Models
+@using FantasyEsportsBattle.Models.Tournament
+
 @inject ApplicationDbContext dbContext
 @inject IJSRuntime JS;
 @inject AuthenticationStateProvider AuthProvider
