--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/TournamentCreationModal.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/TournamentCreationModal.razor
@@ -1,6 +1,6 @@
 ﻿@using FantasyEsportsBattle.Web.Data
-@using FantasyEsportsBattle.Web.Enumerations;
-@using FantasyEsportsBattle.Web.Data.Models;
+@using FantasyEsportsBattle.Enumerations;
+@using FantasyEsportsBattle.Models;
 @inject ApplicationDbContext dbContext
 @inject IJSRuntime JS;
 @inject TournamentService TourneyService
