--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/SpecificTournamentGeneralStats.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/SpecificTournamentGeneralStats.razor
@@ -1,8 +1,8 @@
 ﻿@inject ApplicationDbContext dbContext
 @inject IJSRuntime JS;
 @inject AuthenticationStateProvider AuthProvider
-@using FantasyEsportsBattle.Web.Data.Models
-@using FantasyEsportsBattle.Web.Data.Models.Tournament
+@using FantasyEsportsBattle.Models
+@using FantasyEsportsBattle.Models.Tournament
 @using FantasyEsportsBattle.Web.Data
 
 <style>
