--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/TournamentInvitations.razor
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/Tournaments/TournamentInvitations.razor
@@ -2,8 +2,8 @@
 @inject IJSRuntime JS;
 @inject AuthenticationStateProvider AuthProvider
 @inject TournamentService TourneyService
-@using FantasyEsportsBattle.Web.Data.Models
-@using FantasyEsportsBattle.Web.Data.Models.Tournament
+@using FantasyEsportsBattle.Models
+@using FantasyEsportsBattle.Models.Tournament
 @using FantasyEsportsBattle.Web.Data
 
 <style>
