--- a/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/src/FantasyEsportsBattle.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using FantasyEsportsBattle.Web.Areas.Identity
 @using FantasyEsportsBattle.Web.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using FantasyEsportsBattle.Web.Data.Models
+@using FantasyEsportsBattle.Models
